--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "near-api-js": "^0.44.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "parcel": "^2.3.2"
   },
   "scripts": {
     "start": "parcel src/index.html",
@@ -48,7 +49,21 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^4.5.5",
+    "typescript-plugin-css-modules": "3.4.0",
     "buffer": "^6.0.3",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "postcss-modules": "1.4.1",
+    "autoprefixer": "9.6.1",
+    "sass": "^1.49.9"
+  },
+  "postcss": {
+    "modules": true,
+    "plugins": {
+      "autoprefixer": {
+        "grid": true
+      }
+    }
   }
 }
