--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "~*": ["./*"]
     },
+    "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "noEmit": true,
     "target": "es6",
     "lib": ["ES2020", "DOM"],
@@ -17,9 +18,11 @@
     "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "downlevelIteration": true,
-    "skipLibCheck": true, /* Skip type checking of declaration files. */
-    "suppressImplicitAnyIndexErrors": true
+    "skipLibCheck": true /* Skip type checking of declaration files. */,
+    "suppressImplicitAnyIndexErrors": true,
+    "declaration": true,
+    "strict": true
   },
-  "include": ["src/"],
+  "include": ["src/", "./declaration.d.ts"],
   "exclude": ["node_modules", "**/*.spec.ts", "src/index.tsx"]
 }
