--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "bn.js": "^5.2.0",
     "near-api-js": "^0.44.2",
     "parcel": "^2.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^15.5.4 || ^16.0.0 || ^17.0.0",
+    "react-dom": "^15.5.4 || ^16.0.0 || ^17.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-svg": "^14.1.14",
