--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "bn.js": "^5.2.0",
+    "components": "^0.1.0",
     "near-api-js": "^0.44.2",
     "parcel": "^2.3.2",
     "react": "^15.5.4 || ^16.0.0 || ^17.0.0",
